name:                hackyranky
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/algorithms#readme
license:             BSD3ss
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Boguste Hameyie
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/algorithms
  exposed-modules:     WarmUp
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hackyranky
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hackyranky
  default-language:    Haskell2010

test-suite hackyranky-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hackyranky
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bhameyie/hackerRank-haskell
